# daytrade-partner-data

./: .cursorrules  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.codex/: rules.md
.github/: dependabot.yml
app/: __init__.py  main.py
app/api/: __init__.py  ai.py  explain.py  health.py  market.py  outlook.py  pattern.py  ticker.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/models/: __init__.py  ai.py  catalyst.py  explain.py  outlook.py  pattern.py  ticker.py
app/providers/: __init__.py  cache.py  guards.py  history_provider.py  news_provider.py  price_provider.py
app/services/: __init__.py  ai_service.py  catalyst_service.py  explain_service.py  news_service.py  outlook_engine.py  outlook_service.py  pattern_engine.py  ticker_service.py
docs/: API_CONTRACT.md  PROJECT_GUIDE.md  data-contracts.md
tests/: __init__.py  test_api_layering.py  test_catalyst_service.py  test_explain.py  test_health.py  test_news_service.py  test_outlook.py  test_outlook_engine.py  test_pattern.py  test_pattern_engine.py  test_providers.py  test_ticker.py
